# sdrx

./: .gitignore  README.md
kicad/SN74V245-7PAG/: 2025-03-10_19-16-05.kicad_sym
kicad/SN74V245-7PAG/footprints.pretty/: PAG64-L.kicad_mod  PAG64-M.kicad_mod  PAG64.kicad_mod
kicad/raspi-hat/: RPi_GPIO.kicad_sch  RPi_Hat.kicad_pcb  RPi_Hat.kicad_prl  RPi_Hat.kicad_pro  RPi_Hat.kicad_sch  fp-info-cache  sym-lib-table
tm4c/: CMakeLists.txt  build.sh  flash.sh  main.c  snmp.c  status.c
tm4c/lib/: net.c  run.c
tm4c/lib/clk/: clk.c  clk.h  mono.c  mono.h  tai.c
tm4c/lib/net/: dhcp.c
tm4c/lib/ntp/: ntp.c  peer.h  ref.h
tm4c/lib/ptp/: common.c  common.h  pll.c  pll.h  ptp.c  ptp.h  src.c  src.h  tcmp.c  util.c  util.h
tm4c/lib/snmp/: sensors.c
